# solid-guacamole

./: .env  .env.local  Cargo.toml
files/: index.html
src/: claim.rs  main.rs
src/database/: guacamole.db  guacamole.save
src/repositories/: bootstrap.rs  courses_repository.rs  mod.rs  students_repository.rs  user_repository.rs
src/routes/: courses.rs  mod.rs  post.rs  students.rs
src/security/: password_manager.rs
