
[package]
name = "solid-guacamole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-web-httpauth = "0.7.0"
actix-web-grants = "3.0.0"
actix-cors = "0.6.1"
jsonwebtoken = "8.1.0"
serde = "1.0.130"
serde_json = "1.0.71"
argon2 = "0.4.0"
chrono = {verrsion = "0.4.15", features = ["serde"] }
uuid = {version = "0.8.2", features= ["v4"]}
actix-multipart = "0.4.0"
config = "0.11.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
postgres = "0.19.4"
